--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,6 +2,9 @@
   a {
     color: #66b3ff;
   }
+  [data-amplify-authenticator] {
+    --amplify-components-authenticator-state-inactive-background-color: rgba(255, 255, 255, 0.09);
+  }
   [data-amplify-router] {
     --amplify-components-authenticator-router-background-color: #272727;
   }
